--- a/style.css
+++ b/style.css
@@ -3,6 +3,8 @@ body { margin: 0;}
 canvas { width: 100%; height: 100%;}
 a{
     text-decoration: none;
+}
+.loading a{
     color: rgb(0, 255, 0);
 }
 a:hover{
@@ -14,12 +16,22 @@ h1{
     left:3%; 
     color:rgb(221, 15, 15);
 }
-p{
+.loading{
     position:fixed; 
-    bottom:0 ; 
+    bottom:2%; 
     left:50%; 
     transform: translateX(-50%);
     color: rgb(0, 255, 0);
+}
+.ru{
+    position:fixed; 
+    top: 0 ; 
+    left:50%; 
+    transform: translateX(-50%);
+    color: rgb(214, 228, 214);
+}
+p a{
+    color: rgb(214, 228, 214);
 }
 .loading{
     overflow: hidden; 
