--- a/style.css
+++ b/style.css
@@ -8,11 +8,15 @@ canvas {
 a {
   text-decoration: none;
 }
+p a {
+  color: rgb(214, 228, 214);
+}
 .loading a {
   color: rgb(0, 255, 0);
 }
-a:hover {
-  color: rgb(221, 15, 15);
+a:hover,
+.k a:hover {
+  color: rgb(221, 15, 152);
 }
 h1 {
   position: fixed;
@@ -22,11 +26,18 @@ h1 {
 }
 .loading {
   position: fixed;
-  bottom: 2%;
+  top: 15%;
   left: 50%;
   transform: translateX(-50%);
   color: rgb(0, 255, 0);
 }
+.k a{
+    position: fixed;
+    bottom: 0%;
+    left: 50%;
+    transform: translateX(-50%);
+    color: rgb(0, 255, 0);
+  }
 .ru {
   position: fixed;
   top: 0;
@@ -34,9 +45,7 @@ h1 {
   transform: translateX(-50%);
   color: rgb(214, 228, 214);
 }
-p a {
-  color: rgb(214, 228, 214);
-}
+
 .loading {
   overflow: hidden;
   animation: amsterdam 8s steps(40);
@@ -48,7 +57,7 @@ p a {
     width: 0ch;
   }
   100% {
-    width: 40ch;
+    width: 30ch;
   }
 }
 
