--- a/style.css
+++ b/style.css
@@ -1,5 +1,6 @@
 body {
   margin: 0;
+  font-size: 1.5rem;
 }
 canvas {
   width: 100%;
@@ -9,7 +10,7 @@ a {
   text-decoration: none;
 }
 p a {
-  color: rgb(214, 228, 214);
+  color: rgb(236, 8, 8);
 }
 .loading a {
   color: rgb(0, 255, 0);
@@ -31,24 +32,25 @@ h1 {
   transform: translateX(-50%);
   color: rgb(0, 255, 0);
 }
-.k a{
-    position: fixed;
-    bottom: 0%;
-    left: 50%;
-    transform: translateX(-50%);
-    color: rgb(0, 255, 0);
-  }
+.k a {
+  position: fixed;
+  bottom: 0%;
+  left: 50%;
+  transform: translateX(-50%);
+  color: rgb(0, 255, 0);
+}
 .ru {
   position: fixed;
   top: 0;
   left: 50%;
   transform: translateX(-50%);
-  color: rgb(214, 228, 214);
+  color: rgb(236, 8, 8);
 }
 
 .loading {
   overflow: hidden;
-  animation: amsterdam 8s steps(40);
+  /* animation: amsterdam 8s steps(40); */
+  animation: amsterdam 5s steps(10);
   white-space: nowrap;
 }
 
@@ -57,10 +59,16 @@ h1 {
     width: 0ch;
   }
   100% {
-    width: 30ch;
+    /* width: 30ch; */
+    width: 15ch;
   }
 }
 
+@media only screen and (max-width: 600px) {
+  .ru {
+    display: none;
+  }
+}
 /* .progress_bar{
     position: relative;
     width: 300px;
@@ -78,4 +86,51 @@ h1 {
     height: 100%;
     display: flex;
     align-items: center;
+} */
+/* ================================================ */
+/* #loadScreen {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  width: 100%;
+  height: 100%;
+  background-image: url("https://cdn.clickme.net/gallery/fc18429cb8d55ab93bd854e3e05aaa9e.jpg");
+  background-color: rgb(41, 40, 40);
+  background-repeat: no-repeat;
+  background-attachment: fixed;
+  background-position: center;
+  background-size: contain;
+  z-index: 9999;
+}
+
+#loader {
+  border: 16px solid #3498db38;
+  border-radius: 50%;
+  border-top: 16px solid #3498db;
+  width: 120px;
+  height: 120px;
+  -webkit-animation: spin 2s linear infinite;
+  animation: spin 2s linear infinite;
+  position: fixed;
+  right: 50%;
+  top: 50%;
+  transform: translateX(-50%);
+  transform: translateY(-50%);
+}
+@-webkit-keyframes spin {
+  0% {
+    -webkit-transform: rotate(0deg);
+  }
+  100% {
+    -webkit-transform: rotate(360deg);
+  }
+}
+
+@keyframes spin {
+  0% {
+    transform: rotate(0deg);
+  }
+  100% {
+    transform: rotate(360deg);
+  }
 } */
